1. Реализация кеша на SoftReference [#1592 #250307]